--- a/contact.html
+++ b/contact.html
@@ -1,61 +1,66 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Contact Alexis</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Anton|Barlow&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
+        <head>
+                <title>About Me</title>
+                <meta charset="UTF-8">
+                <meta name="viewpoint" content="width=device-width, initial-scale-1.0">
+                <meta http-equiv="X-UA-Compatible" content="ie=edge">
+                <link rel="stylesheet" href="assets/css/style.css">
+                <link href="https://fonts.googleapis.com/css?family=Anton|Barlow&display=swap" rel="stylesheet">
+            </head>
+            
+            <body>
+                <aside>
+                    <img id="menu" src="images/menu.svg">
+                    <nav>
+                        <section id="logo">
+                            <header>Alexis Chisolm</header>
+                        </section>
+                        <ul>
+                            <li><a href="index.html">
+                                    About
+                                </a></li>
+                            <br>
+                            <li><a href="portfolio.html">
+                                    Portfolio
+                                </a></li>
+                            <br>
+                            <li><a href="contact.html">
+                                    Contact
+                                </a></li>
+                        </ul>
+                    </nav>
+                </aside>
 
-<body>
-    <nav>
-        <section id="logo">
-            <header>Alexis Chisolm</header>
-        </section>
-        <ul>
-            <li><a href="index.html">
-                    About |
-                </a></li>
-            <li><a href="portfolio.html">
-                    Portfolio |
-                </a></li>
-            <li><a href="contact.html">
-                    Contact |
-                </a></li>
-        </ul>
-    </nav>
-
-    <section class="container">
-        <section id="about-me">
+    <div class="container">
+        <header>
             Contact
-        </section>
+        </header>
 
         <br>
-        <hr>
         <br>
-
-        <main>
-            <form>
-                <div class="form-group">
-                    <label for="FormControlInput1">Name</label>
-                    <input type="text" class="form-control" id="FormControlInput1" placeholder="Name">
-                </div>
-                <div class="form-group">
-                    <label for="FormControlInput2">Email</label>
-                    <input type="text" class="form-control" id="FormControlInput1" placeholder="JaneDoe@example.com">
-                </div>
-                <div class="form-group">
-                    <label for="FormControlTextarea1">Message</label>
-                    <textarea class="form-control" id="FormControlTextarea1" rows="3"></textarea>
-                </div>
-
-                <button>Submit!</button>
-            </form>
-        </main>
-    </section>
-
+        <div class="form">
+            Name
+            <textarea rows="2" cols="40"></textarea>
+            Email
+            <textarea rows="2" cols="40"></textarea>
+            Message
+            <textarea rows="10" cols="40"></textarea>
+            <button>Submit!</button>
+        </div>
+    </div>
+    <script>
+            (function () {
+                var menu = document.querySelector('ul'),
+                    menulink = document.querySelector('img');
+    
+                menulink.addEventListener('click', function (e) {
+                    menu.classList.toggle('active');
+                    e.preventDefault();
+                });
+            })();
+        </script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
