--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,7 @@
                     Portfolio
             </header>
             <br>
+            <!-- I couldn't figure out how to get the text over the pic and responsive -->
             <section>
                 <a href="https://alexischis.github.io/">
                     <img src="https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/types-of-flowers-1520214627.jpg"
