--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <meta name="viewpoint" content="width=device-width, initial-scale-1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- google font -->
     <link href="https://fonts.googleapis.com/css?family=Anton|Barlow&display=swap" rel="stylesheet">
 </head>
             
 <body>
+    <!-- drop down navigation -->
     <aside>
         <img id="menu" src="images/menu.svg">
     <nav>
     <section id="logo">
         <header>Alexis Chisolm</header>
     </section>
+    <!-- unordered list navigation bar -->
         <ul>
         <li><a href="index.html">
             About
@@ -53,6 +56,7 @@
     </div>
     </section>
     <script>
+        // event to access dropdown navigation
         (function () {
             var menu = document.querySelector('ul'),
                 menulink = document.querySelector('img');
